--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
-# Python
+# Ignore Python venv
+.venv/
+venv/
+
+# Bytecode
 __pycache__/
 *.pyc
 
 # OS
 .DS_Store
 
-# Env/IDE
-.venv/
-.env
+# IDE
 .vscode/
 
 # Build
 dist/
 build/
+.venv/
