--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 fastapi==0.112.2
 uvicorn==0.30.6
 pydantic==2.9.2
-python-dotenv==1.0.1
+starlette==0.37.2
+httpx==0.27.2
+typing-extensions==4.12.2
 requests==2.32.3
+python-dotenv==1.0.1
 pytest==8.3.2
